# BlogGenerator

./: pyproject.toml
backend/: app.py  config.py  model.py  routes.py
frontend/: app.py
